[workspace.package]
version = "0.5.0"
description = "Very simple coordinate frame conversions"
authors = ["Markus Mayer <widemeadows@gmail.com>"]
categories = ["no-std", "no-std::no-alloc"]
keywords = ["coordinate-system", "orientation", "transformation", "sensor-fusion"]
edition = "2021"
license = "EUPL-1.2 OR Apache-2.0 OR MIT"
rust-version = "1.70.0"
repository = "https://github.com/sunsided/coordinate-frame"
homepage = "https://github.com/sunsided/coordinate-frame"

[workspace]
resolver = "2"
members = [
    "crates/coordinate-frame",
    "proc-macros/coordinate-frame-derive"
]
default-members = [
    "crates/coordinate-frame"
]
