[package]
name = "coordinate-frame"
description.workspace = true
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "../../README.md"

[features]
default = ["num-traits", "defmt"]
std = []
num-traits = ["dep:num-traits"]
defmt = ["dep:defmt"]

[dependencies]
coordinate-frame-derive = { version = "0.1.0", path = "../../proc-macros/coordinate-frame-derive" }
defmt = { version = "0.3.8", optional = true }
num-traits = { version = "0.2.19", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
