[package]
name = "coordinate-frame"
description.workspace = true
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "../../README.md"

[features]
std = []
num-traits = ["dep:num-traits"]
defmt = ["dep:defmt", "coordinate-frame-derive/defmt"]
micromath = ["dep:micromath", "coordinate-frame-derive/micromath"]
nalgebra = ["dep:nalgebra", "coordinate-frame-derive/nalgebra"]

[dependencies]
coordinate-frame-derive = { version = "0.3.2", path = "../../proc-macros/coordinate-frame-derive" }
defmt = { version = "0.3.8", optional = true }
micromath = { version = "2.1.0", optional = true, features = ["vector"] }
nalgebra = { version = ">=0.30.0,<1.0.0", optional = true, default-features = false }
num-traits = { version = "0.2.19", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
