[package]
name = "coordinate-frame-derive"
description.workspace = true
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "../../README.md"

[lib]
proc-macro = true

[features]
std = []

[dependencies]
quote = "1.0.36"
syn = "2.0.69"
